--- a/_etc/todo.txt
+++ b/_etc/todo.txt
@@ -1,22 +1,22 @@
 Project::add e Project::edit
   Selecionar usuários que participarão do projeto. OK
 
-User::add
-  Não permitir cadastro de um username existente
-
 User::view
   Listar Tarefas designadas para o usuário OK
-
-User::login
-  Criar uma activity "login" no banco OK
-  Verificar se existe uma activity de login do mesmo IP e criar uma activity de logout 
-  Criar uma activity de falha de login no banco
 
 User::logout
   Criar uma activity "logout" no banco OK
 
 Activities::index
   Show Type name OK
+
+User::add
+  Não permitir cadastro de um username existente OK
+
+User::login
+  Criar uma activity "login" no banco OK
+  Verificar se existe uma activity de login do mesmo IP e criar uma activity de logout 
+  Criar uma activity de falha de login no banco
 
 User::dashboard
   Menu lateral responsivo OK
@@ -29,10 +29,7 @@ Task::view
   Bug fix: Fix association bug between activity OK (it was a typO ¬¬)
   Criar botão para adicionar uma nota
   Marcar como completa
-  
-
-
-
+  Exibir total de tempo executando a tarefa 
 
 Note::add
   Adicionar uma nota à uma tarefa
